--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 PORT=
-MONGODB_USER =
-MONGODB_PASSWORD =
-MONGODB_URL =
-MONGODB_DB =
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_URL=
+MONGODB_DB=
+JWT_SECRET=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
