reset pwd + ubdate user + avatar

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ JWT_SECRET=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
+ENABLE_CLOUDINARY=
+SMTP_FROM=
+SMTP_HOST=
+SMTP_PASSWORD=
+SMTP_PORT=
+SMTP_USER=
+APP_DOMAIN=
