--- a/swagger/components/schemas/water.yaml
+++ b/swagger/components/schemas/water.yaml
@@ -21,7 +21,7 @@ properties:
     description: 'Timestamp when the water was consumed. Format: ISO 8601'
     type: string
     format: date-time
-    example: '2024-09-17T12:00:00Z'
+    example: '2024-09-17T12:00'
   owner:
     description: 'Unique ID of the user who owns the water record.'
     type: string
