--- a/swagger/paths/water/postWater.yaml
+++ b/swagger/paths/water/postWater.yaml
@@ -24,7 +24,7 @@ requestBody:
             description: 'Timestamp when the water was consumed. Format ISO 8601.'
             type: string
             format: date-time
-            example: '2024-09-17T12:00:00Z'
+            example: '2024-09-17T12:00'
         required:
           - amount
 responses:
