--- a/swagger/paths/water/{id}/patchWaterNoteId.yaml
+++ b/swagger/paths/water/{id}/patchWaterNoteId.yaml
@@ -30,7 +30,7 @@ requestBody:
             description: 'Timestamp when the water was consumed. Format: ISO 8601.'
             type: string
             format: date-time
-            example: '2024-09-17T12:00:00Z'
+            example: '2024-09-17T12:00'
 responses:
   '200':
     description: 'Water note updated successfully'
